add note function implmented

--- a/note_manager/style.css
+++ b/note_manager/style.css
@@ -116,6 +116,10 @@ header #search-note input{
     color: #DC143C;
 }
 
+.note-list ul li input.edit-note{
+    display: none;
+}
+
 .note-list ul li input{
 
     padding: 5px 0;
